# fs-browser

./: CLAUDE.md  Cargo.toml  README.md  build.rs  package.toml
assets/i18n/: de.toml  en.toml
proto/: browser.proto
src/: app.rs  bookmark.rs  bookmarks.rs  cli.rs  config.rs  controller.rs  grpc.rs  history.rs  keys.rs  lib.rs  main.rs  model.rs  rest.rs  search_engine.rs  view.rs
