[package]
name        = "fs-browser"
description = "FreeSynergy – embedded web browser with tabs, bookmarks and S3 downloads"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-browser"

[lib]
name = "fs_browser"
path = "src/lib.rs"

[[bin]]
name = "fs-browser"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "fs-components/desktop"]
web     = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-components = { path = "../fs-components" }
fs-i18n       = { path = "../fs-i18n", features = ["dioxus"] }
dioxus        = { version = "0.7.3", default-features = false, features = ["macro", "html", "signals", "hooks", "launch", "mounted", "document"] }
serde         = { version = "1", features = ["derive"] }
toml          = { version = "1", features = ["preserve_order"] }
chrono        = { version = "0.4", features = ["serde"] }
mimalloc      = { version = "0.1", default-features = false }

# ── Local patches ─────────────────────────────────────────────────────────────
# Keep in sync with fs-desktop patch.
[patch.crates-io]
dioxus-desktop = { path = "../fs-desktop/vendor/dioxus-desktop" }
