[package]
name        = "fs-browser"
description = "FreeSynergy – embedded web browser with tabs, bookmarks and navigation"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-browser"

[lib]
name = "fs_browser"
path = "src/lib.rs"

[[bin]]
name = "fs-browser"
path = "src/main.rs"

[features]
default  = ["iced-gui"]
iced-gui = ["dep:fs-gui-engine-iced"]
servo    = []   # future: ["dep:fs-web-engine-servo"]

[dependencies]
fs-web-engine      = { path = "../fs-web-engine" }
fs-gui-engine-iced = { path = "../fs-gui-engine-iced", optional = true }
fs-i18n            = { path = "../fs-i18n" }
serde              = { version = "1", features = ["derive"] }
toml               = { version = "1", features = ["preserve_order"] }
chrono             = { version = "0.4", features = ["serde"] }
mimalloc           = { version = "0.1", default-features = false }
